# graphxplore

./: .gitignore  .readthedocs.yaml  CNAME  LICENSE  README.md  _config.yml  aag_intro.md  functionalities.md  home.md  neo4j_installation.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: unittest.yml
_includes/: mathjax.html
_layouts/: mathjax.html
aag_intro/: aag_edges.md  aag_nodes.md  bloom_navigation.md
docs/: requirements.txt
docs/source/: conf.py  graphxplore.Basis.AttributeAssociationGraph.rst  graphxplore.Basis.BaseGraph.rst  graphxplore.Basis.KnowledgeGraph.rst  graphxplore.Basis.KnowledgeSummaryGraph.rst  graphxplore.Basis.rst  graphxplore.Dashboard.rst  graphxplore.DataMapping.Conclusions.rst  graphxplore.DataMapping.Conditionals.rst  graphxplore.DataMapping.rst  graphxplore.GraphDataScience.rst  graphxplore.GraphTranslation.rst  graphxplore.MetaDataHandling.rst  index.rst
frontend/: build_release.sh  package.json  requirements.txt
frontend/.streamlit/: config.toml
frontend/GraphXplore/: bloom_config.json  browser_style.grass  streamlit_app.py
graphxplore/Basis/: graph_io_handlers.py
graphxplore/Dashboard/: dashboard_buider.py
graphxplore/DataMapping/: data_aggregator.py  data_mapping.py  data_structure_transformer.py  data_transformation.py  mapping_utils.py  meta_lattice.py  variable_mapping.py
graphxplore/GraphDataScience/: attribute_association_graph_generator.py  post_filter.py  pre_filter.py
graphxplore/GraphTranslation/: graph_translator.py
test/: conftest.py  neo4j_test_config.py
test/Basis/: test_utils.py  (+2 more)
(+77 files in other folders)
