[build-system]
requires = ["setuptools>=61.0", "neo4j", "chardet", "plotly", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name="graphxplore"
version="0.9.0"
authors = [
    {name="Louis Bellmann"}
]
packages = ["graphxplore"]
description="meta data extraction, cleaning, and transformation as well as data exploration using graph representations and dashboards"
readme="README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["neo4j", "chardet", "plotly", "pandas"]

[project.urls]
Homepage = "https://github.com/UKEIAM/graphxplore"